# id-registry

./: .gitattributes  Cargo.toml  README.md  SuggestShareResources.md  Suggestions.md
gui/: CMakeLists.txt
gui/include/: database.h  mainwindow.h
gui/src/: database.cpp  main.cpp  mainwindow.cpp
server/: Cargo.toml
server/src/: lib.rs  main.rs
