[package]
name = "id-registry-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }     # HTTP server
rusqlite = { version = "0.31.0", features = ["bundled"] }  # SQLite (bundled = no system dep)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.52"           # Read Windows Registry (HKCU)
rand = "0.8.5"            # For random ID generation
anyhow = "1.0"            # Nice error handling
tokio = { version = "1", features = ["full"] }   # If we ever go async-heavy (Rocket uses it)
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.24.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }